fix overflow x mobile

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -7,7 +7,9 @@ body, html {
   @apply bg-light text-black font-sans;
 }
 
-html {
+#__nuxt {
+  position: relative;
+  width: 100%;
   overflow-x: hidden;
 }
 
